--- a/meson_options.txt
+++ b/meson_options.txt
@@ -109,7 +109,7 @@ option(
 )
 option(
   'tests',
-  type : 'string',
+  type : 'feature',
   value : 'disabled',
   description : 'Build tests and demos'
 )
